--- a/demo/index.html
+++ b/demo/index.html
@@ -5,22 +5,22 @@
     <title>Demo UI Select Tree</title>
 
     <!-- stylesheets -->
-    <link rel="stylesheet" href="bower_components/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="bower_components/angular-ui-select/select.css">
-    <link rel="stylesheet" href="bower_components/selectize/selectize.bootstrap3.css">
-    <link rel="stylesheet" href="bower_components/font-awesome/font-awesome.css">
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../bower_components/ui-select/dist/select.css">
+    <link rel="stylesheet" href="../bower_components/selectize/dist/css/selectize.bootstrap3.css">
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css">
 
     <!-- vendor dependencies -->
-    <script type="text/javascript" src="bower_components/angular/angular.js"></script>
-    <script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script type="text/javascript" src="bower_components/angular-ui-select/select.js"></script>
-    <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
+    <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script type="text/javascript" src="../bower_components/ui-select/dist/select.js"></script>
+    <script type="text/javascript" src="../bower_components/lodash/lodash.js"></script>
 
     <!-- ui-select-tree dependencies -->
-    <script type="text/javascript" src="dist/ui-select-tree.js"></script>
+    <script type="text/javascript" src="../dist/ui-select-tree.js"></script>
 
     <!-- demo app -->
-    <script type="text/javascript" src="demo/app.js"></script>
+    <script type="text/javascript" src="demo.js"></script>
   </head>
   <body>
 
