--- a/demo/index.html
+++ b/demo/index.html
@@ -4,19 +4,20 @@
     <meta charset="utf-8">
     <title>Demo UI Select Tree</title>
 
-    <!-- stylesheets -->
+    <!-- vendor stylesheets -->
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../bower_components/ui-select/dist/select.css">
     <link rel="stylesheet" href="../bower_components/selectize/dist/css/selectize.bootstrap3.css">
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css">
 
-    <!-- vendor dependencies -->
+    <!-- vendor libs -->
     <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
     <script type="text/javascript" src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script type="text/javascript" src="../bower_components/ui-select/dist/select.js"></script>
     <script type="text/javascript" src="../bower_components/lodash/lodash.js"></script>
 
     <!-- ui-select-tree dependencies -->
+    <link rel="stylesheet" href="../dist/ui-select-tree.css">
     <script type="text/javascript" src="../dist/ui-select-tree.js"></script>
 
     <!-- demo app -->
