fix typo in directive call in demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -27,8 +27,8 @@
 
   <main ng-app="demo" ng-init="model = {}">
 
-    <ui-tree-select model="model">
-    </ui-tree-select>
+    <ui-select-tree model="model">
+    </ui-select-tree>
 
     <pre>Model: {{ model | json }}</pre>
 
